# hw_optimization

./: .gitmodules  ComputeConcept.md  README.md
gpu/: README.md
gpu_intel/cm_learn/: README.md
gpu_intel/cm_learn/CodeSamples/: CMakeLists.txt  run.sh
gpu_intel/cm_learn/CodeSamples/01_HelloCM/: CMakeLists.txt
gpu_intel/cm_learn/CodeSamples/01_HelloCM/src/: hello_cm_kernel.cm  main.cpp
gpu_intel/cm_learn/CodeSamples/utils/: my_common.hpp  my_device.hpp
gpu_intel/levelzero_learn/: README.md
gpu_intel/levelzero_learn/CodeSamples/: Concepts.md
gpu_intel/levelzero_learn/CodeSamples/02_CommandListAndQueue/: CMakeLists.txt
gpu_intel/levelzero_learn/CodeSamples/05_ModulesKernels/: CMakeLists.txt
gpu_intel/levelzero_learn/CodeSamples/06_spirv_kernel/: CMakeLists.txt
gpu_intel/levelzero_learn/CodeSamples/07_AOT_ocl_spirv_l0/: CMakeLists.txt
gpu_intel/levelzero_learn/CodeSamples/utils/: my_common.hpp  ze_api_wrap.hpp
gpu_intel/opencl_learn/: README.md
gpu_intel/opencl_learn/CodeSamples/: CMakeLists.txt  run_vtune.sh
gpu_intel/opencl_learn/CodeSamples/01_HelloOpenCL/: CMakeLists.txt
gpu_intel/opencl_learn/CodeSamples/01_HelloOpenCL/src/: main.cpp
gpu_intel/opencl_learn/CodeSamples/02_Rope_kernel_opencl/: README.md
gpu_intel/opencl_learn/CodeSamples/02_Rope_kernel_opencl/src/: main.cpp
gpu_intel/opencl_learn/CodeSamples/03_DPP_algo/: CMakeLists.txt  README.md
gpu_intel/opencl_learn/CodeSamples/03_DPP_algo/src/: dpp_kernel.cl  dpp_kernel_split.cl  dpp_ref.cpp  dpp_ref.hpp  dpp_split_kernel.cpp  main.cpp  mat_diagonal_max_ref.hpp
gpu_intel/opencl_learn/CodeSamples/04_array_max/: CMakeLists.txt  README.md
gpu_intel/opencl_learn/CodeSamples/04_array_max/src/: array_max_kernel.cl  array_max_single_group_kernel.cl  main.cpp
gpu_intel/opencl_learn/CodeSamples/05_GEMM/: CMakeLists.txt  README.md
gpu_intel/opencl_learn/CodeSamples/05_GEMM/src/: gemm_kernel.cl  gemm_kernel_block.cl  gemm_kernel_opt_with_prepack_b.cl  gemm_kernel_ref.cl  gemm_opt_gpu.hpp  gemm_opt_gpu_block.cpp  gemm_opt_gpu_prepack_b.cpp  gemm_opt_gpu_ref.cpp  gemm_ref.hpp  main.cpp  utils_half.hpp
gpu_intel/opencl_learn/CodeSamples/06_OCL_MEM/: CMakeLists.txt  README.md
gpu_intel/opencl_learn/CodeSamples/06_OCL_MEM/src/: main.c
gpu_intel/opencl_learn/CodeSamples/07_LinearAttention/: README.md
gpu_intel/opencl_learn/CodeSamples/utils/: kernel_io.hpp  my_common.hpp  my_log.hpp  my_ocl.hpp
gpu_intel/sycl_learn/CodeSamples/: run.sh
gpu_intel/sycl_learn/CodeSamples/02_sycl_ocl_interoperate/: run.sh
gpu_intel/sycl_learn/CodeSamples/03_sycl_levelzero_backend/: .gitignore  CMakeLists.txt
gpu_intel/sycl_learn/CodeSamples/05_Sycl_Concept/: CMakeLists.txt
gpu_intel/sycl_learn/CodeSamples/06_Sycl_Extension_SIMD/: CMakeLists.txt
intel_gpu/: .gitignore
intel_gpu/levelzero_learn/: README.md
intel_gpu/levelzero_learn/CodeSamples/: CMakeLists.txt  README.md
intel_gpu/levelzero_learn/CodeSamples/00_HelloLevelZero/: CMakeLists.txt
intel_gpu/levelzero_learn/CodeSamples/00_HelloLevelZero/src/: main.cpp
intel_gpu/levelzero_learn/CodeSamples/01_Context/: CMakeLists.txt
intel_gpu/levelzero_learn/CodeSamples/01_Context/src/: main.cpp
intel_gpu/levelzero_learn/CodeSamples/02_CommandListAndQueue/src/: main.cpp
intel_gpu/levelzero_learn/CodeSamples/03_SyncPrimitive/: CMakeLists.txt
intel_gpu/levelzero_learn/CodeSamples/03_SyncPrimitive/src/: main.cpp
intel_gpu/levelzero_learn/CodeSamples/04_Barriers/src/: main.cpp
intel_gpu/levelzero_learn/CodeSamples/05_ModulesKernels/: CMakeLists.txt
intel_gpu/levelzero_learn/CodeSamples/05_ModulesKernels/src/: main.cpp
intel_gpu/levelzero_learn/CodeSamples/06_spirv_kernel/src/: main.cpp
intel_gpu/levelzero_learn/CodeSamples/utils/: common.hpp  log.hpp  my_common.hpp  ze_api_wrap.hpp
intel_gpu/opencl_learn/: .gitignore  README.md
intel_gpu/opencl_learn/CodeSamples/: CMakeLists.txt
intel_gpu/pti_gpu_tool_learn/: README.md
intel_gpu/sycl_learn/: README.md
intel_gpu/sycl_learn/CodeSamples/: CMakeLists.txt
intel_gpu/sycl_learn/CodeSamples/01_HelloSycl/: CMakeLists.txt
intel_gpu/sycl_learn/CodeSamples/01_HelloSycl/src/: main.cpp
intel_gpu/sycl_learn/CodeSamples/02_sycl_ocl_interoperate/: CMakeLists.txt
intel_gpu/sycl_learn/CodeSamples/02_sycl_ocl_interoperate/src/: kernel_f32_to_f16.cl  levelzero_rope.cpp  load_dump_data.cpp  main.cpp  private.hpp  reorder_weights_7_weight_0_0_clean.cl  sycl_levelzero_backend.cpp  sycl_levelzero_backend_reoder_weights.cpp  sycl_levelzero_backend_reoder_weights.cpp.cpp  sycl_levelzero_backend_rope_ref.cpp
intel_gpu/sycl_learn/CodeSamples/02_sycl_ocl_interoperate/src/kernel_rope_ref/: SYCL_LZ_program_1_bucket_0_part_53_8491392767821923070.cl  program1_network1_0_rope___module.model.layers.1.self_attn_aten__add_Add_dst0.txt  program1_network1_0_rope___module.model.layers.1.self_attn_aten__add_Add_src0.txt  rope_ref.cl
intel_gpu/sycl_learn/CodeSamples/03_levelzero_backend_olc_kernel/: CMakeLists.txt
intel_gpu/sycl_learn/CodeSamples/03_levelzero_backend_olc_kernel/src/: main.cpp
intel_gpu/sycl_learn/CodeSamples/03_sycl_levelzero_backend/: CMakeLists.txt  README.md  run_docker.sh
intel_gpu/sycl_learn/CodeSamples/03_sycl_levelzero_backend/src/: main.cpp
intel_gpu/sycl_learn/CodeSamples/04_USM_TerseSyntax/: CMakeLists.txt
intel_gpu/sycl_learn/CodeSamples/04_USM_TerseSyntax/src/: main.cpp
intel_gpu/sycl_learn/CodeSamples/05_Sycl_Concept/: CMakeLists.txt
intel_gpu/sycl_learn/CodeSamples/05_Sycl_Concept/src/: main.cpp
intel_gpu/sycl_learn/CodeSamples/06_Sycl_Extension_SIMD/: CMakeLists.txt
intel_gpu/sycl_learn/CodeSamples/06_Sycl_Extension_SIMD/src/: main.cpp
intel_gpu/sycl_learn/CodeSamples/07_ExecuteOrder/: CMakeLists.txt
intel_gpu/sycl_learn/CodeSamples/07_ExecuteOrder/src/: main.cpp
intel_gpu/sycl_learn/CodeSamples/kernel_01_MatMul/: CMakeLists.txt
intel_gpu/sycl_learn/CodeSamples/kernel_01_MatMul/src/: main.cpp  matmul_ref.cpp  mm_utils.cpp  my_sycl_kernel.hpp  private.hpp  sycl_matmul_01.cpp
intel_gpu/sycl_learn/CodeSamples/utils/: my_common.hpp  my_device.hpp
(+22 files in other folders)
